--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 pandas==1.5.3
-pandas-ta @ git+https://github.com/twopirllc/pandas-ta.git
+git+https://github.com/twopirllc/pandas-ta.git@master#egg=pandas-ta
 numpy==1.23.5
 pyTelegramBotAPI==4.12.0
 flask==3.0.3
